R1.7.3      05-06-2021    Kukhee Kim (khkim)
                        - bug fix: evaluate the phase jump only for valid pulses to freeeze the circular buffer

R1.7.2      04-28-2021    Kukhee Kim (khkim)
                        - add circular buffer to record fault or unexpected phase jump (arriaval time jump)
                        - add status PV for the circular buffers

R1.7.1      03-04-2021    Kukhee Kim (khkim)
                        - add BSA channels for reference phase and 4 probes

R1.7.0      03-03-2021    Kukhee Kim (khkim)
                        - add phase offset for zeroing to avoid wrapround issue on the bolder
                        - add phase zeroing PV and logic

R1.6.2      03-01-2021    Kukhee Kim (khkim)
                        - fix data conversion for BSTREAM, bug fixing for the reference subtraction

R1.6.1      02-26-2021    Kukhee Kim (khkim)
                        - bug fixing for the rms_time1 and tims_chg1 update

R1.6.0      10-23-2020    Kukhee Kim (khkim)
                        - implement BSSS waveform (updating at beam reate)

R1.5.0      10-13-2020    Kukhee Kim (khkim)
                        - implement PID feedback NCO control

R1.4.0      09-23-2002    Kukhee Kim (khki)
                        - implement rms and average, valid and invalid counter

R1.3.0      09-03-2020    Kukhee Kim (khkim)
                        - build with pcavLib API R1.1.0
                        - add waveform data selector

R1.2.0      08-10-2020    Kukhee Kim (khkim)
                        - add BSA

R1.1.0      08-07-2020    Kukhee Kim (khkim)
                        - add slow time PVs and chage PVs, adding linear conversion

R1.0.0      08-06-2020    Kukkhee Kim (khkim)
                        - apply new register map, new data conversion
                        - build pcavLib R1.0.0

R0.0.0      07-18-2020    Kukhee Kim (khkim)
                        - Initial release for pcavAsyn epics module